calib and other

--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -13,6 +13,10 @@
             <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
             <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
         </StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="5">
+            <Label x:Name="ff" Content="Max Degrees Of Parallelism" />
+            <TextBox x:Name="maxDegreesOfParallelism" Width="45" Text="-1"/>
+        </StackPanel>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
