--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -148,7 +148,7 @@
                                                 <Setter Property="BorderBrush" Value="Transparent" />
                                                 <Setter Property="Foreground" Value="Black" />
                                             </Trigger>
-                                            <DataTrigger Binding="{Binding IsMySelected}" Value="True">
+                                            <DataTrigger Binding="{Binding InProgress}" Value="True">
                                                 <Setter Property="Foreground" Value="Blue" />
                                                 <Setter Property="FontWeight" Value="Bold" />
                                             </DataTrigger>
@@ -164,7 +164,7 @@
                                                 <Setter Property="BorderBrush" Value="Transparent" />
                                                 <Setter Property="Foreground" Value="Black" />
                                             </Trigger>
-                                            <DataTrigger Binding="{Binding IsMySelected}" Value="True">
+                                            <DataTrigger Binding="{Binding InProgress}" Value="True">
                                                 <Setter Property="Foreground" Value="Blue" />
                                                 <Setter Property="FontWeight" Value="Bold" />
                                             </DataTrigger>
