--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -23,12 +23,12 @@
         <StackPanel Margin="5">
             <CheckBox x:Name="checkBoxDecoy" Content="Generate Decoys" />
             <CheckBox x:Name="checkBoxParsimony" Content="Aggregate Proteins" />
-            <CheckBox x:Name="checkBoxNoOneHitWonders" Content="Require >1 peptides to ID protein" >
+            <CheckBox x:Name="checkBoxNoOneHitWonders" Content="Require at least two peptides to identify protein" >
                 <CheckBox.Style>
                     <Style TargetType="CheckBox">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsChecked,ElementName=checkBoxParsimony}" Value="False">
-                                <Setter Property="IsEnabled" Value="False"/>
+                                <Setter Property="IsEnabled" Value="False" />
                                 <Setter Property="IsChecked" Value="False"/>
                             </DataTrigger>
                         </Style.Triggers>
